project working with openapi-generator-maven-plugin
