# src/main/java/dev/pollito/springcityexplorer/controller/CommentController.java
@@ -1,20 +1,22 @@
 package dev.pollito.springcityexplorer.controller;
 
 import dev.pollito.springcityexplorer.api.CommentApi;
-import dev.pollito.springcityexplorer.models.CommentPostBody;
+import dev.pollito.springcityexplorer.models.CommentPostRequest;
+import dev.pollito.springcityexplorer.models.CommentPostResponse;
 import dev.pollito.springcityexplorer.models.Comments;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class CommentController implements CommentApi {
-    @Override
-    public ResponseEntity<Comments> getComments(Integer limit, Integer offset) {
-        return null;
-    }
 
-    @Override
-    public ResponseEntity<Void> postComment(CommentPostBody body) {
-        return null;
-    }
+  @Override
+  public ResponseEntity<Comments> getComments(Integer limit, Integer offset, String sortOrder) {
+    return CommentApi.super.getComments(limit, offset, sortOrder);
+  }
+
+  @Override
+  public ResponseEntity<CommentPostResponse> postComment(CommentPostRequest commentPostRequest) {
+    return CommentApi.super.postComment(commentPostRequest);
+  }
 }
